# Eyas

./: .gitignore  conf.py  index.rst  pyproject.toml  readthedocs.yaml
RobotProject/: README.md  build.gradle
RobotProject/src/main/kotlin/com/team4099/robot/: Main.kt
docs/: conf.py  temp.rst
docs/installation/: installation.rst
