[tool.poetry]
name = "Eyas"
version = "1.0.0"
description = "An Introductory Guide to 4099 Robot Code."
authors = ["The Falcons - Team 4099 <contact@team4099.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
scour = "^0.38.2"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"